able to get picture div boxes setup, not pretty though

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <div class="mainnav">
       <div class="headings">
         <img src="designco-logo.png">
-        <a href=""> <strong>DESIGNCO</strong></a>
         <a href="" style="color:red;"> Home</a>
         <a href=""> Portfolio</a>
         <a href=""> About</a>
@@ -32,6 +31,30 @@
     <div class="motto">
       <h1><strong>The Details Matter</strong></h1>
       <p>We're making beautiful website layouts using modern methods.</p>
+    </div>
+  </div>
+
+  <div class="picturemaster">
+    <div class="picturecontainer">
+      <div class="leftcol">
+        <div class="leftT">
+          <img src="https://unsplash.it/600/300/?random">
+        </div>
+        <div class="leftBL">
+          <img src="https://unsplash.it/300/200/?random">
+        </div>
+        <div class="leftBR">
+          <img src="https://unsplash.it/300/134/?random">
+        </div>
+      </div>
+      <div class="rightcol">
+        <div class="rightT">
+          <img src="https://unsplash.it/300/200/?random">
+        </div>
+        <div class="rightB">
+          <img src="https://unsplash.it/300/251/?random">
+        </div>
+      </div>
     </div>
   </div>
 </body>
