--- a/index.html
+++ b/index.html
@@ -57,4 +57,17 @@
       </div>
     </div>
   </div>
+  <div class="footermaster">
+    <div class="footercontainer">
+      <div class="footer1">
+        <h2>What's New</h2>
+        <p>We always have new projects that clients hire us for.
+          <br><br>
+          <a href>View recent projects.</a></p>
+      </div>
+      <div class="footer2">
+        <h2>Modern Layouts</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
 </body>
