--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
   <div class="navbar">
     <div class="mainnav">
       <div class="headings">
-        <img src="designco-logo.png">
-        <a href="" style="color:red;"> Home</a>
-        <a href=""> Portfolio</a>
-        <a href=""> About</a>
-        <a href=""> Contact</a>
-        <img src="icon-search.png">
+        <div class="col col-left">
+          <img src="designco-logo.png" id="logo">
+        </div>
+        <div class="col col-middle">
+          <a href="" style="color:red;"> Home</a>
+          <a href=""> Portfolio</a>
+          <a href=""> About</a>
+          <a href=""> Contact</a>
+        </div>
+        <div class="col col-right">
+          <img src="icon-search.png" id="search">
+        </div>
       </div>
     </div>
   </div>
