--- a/index.html
+++ b/index.html
@@ -1,79 +1,86 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 
-  <title>DESIGNCO</title>
-  <meta name="description" content="Designco Homepage">
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>DESIGNCO</title>
+    <meta name="description" content="Designco Homepage">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="css/normalize.css"/>
-  <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
 
 </head>
+
 <body>
-  <div class="navbar">
-    <div class="mainnav">
-      <div class="headings">
-        <div class="col col-left">
-          <img src="designco-logo.png" id="logo">
+    <div class="navbar">
+        <div class="mainnav">
+            <div class="headings">
+                <div class="col col-left">
+                    <img src="designco-logo.png" id="logo">
+                </div>
+                <div class="col col-middle">
+                    <a href="" style="color:red;"> Home</a>
+                    <a href=""> Portfolio</a>
+                    <a href=""> About</a>
+                    <a href=""> Contact</a>
+                </div>
+                <div class="col col-right">
+                    <img src="icon-search.png" id="search">
+                </div>
+            </div>
         </div>
-        <div class="col col-middle">
-          <a href="" style="color:red;"> Home</a>
-          <a href=""> Portfolio</a>
-          <a href=""> About</a>
-          <a href=""> Contact</a>
-        </div>
-        <div class="col col-right">
-          <img src="icon-search.png" id="search">
-        </div>
-      </div>
     </div>
-  </div>
 
 
-  <div class="mottocontainer">
-    <div class="motto">
-      <h1><strong>The Details Matter</strong></h1>
-      <p>We're making beautiful website layouts using modern methods.</p>
+    <div class="mottocontainer">
+        <div class="motto">
+            <h1><strong>The Details Matter</strong></h1>
+            <p>We're making beautiful website layouts using modern methods.</p>
+        </div>
     </div>
-  </div>
 
-  <div class="picturemaster">
-    <div class="picturecontainer">
-      <div class="leftcol">
-        <div class="leftT">
-          <img src="https://unsplash.it/600/300/?random">
+    <div class="picturemaster">
+        <div class="picturecontainer">
+            <div class="leftcol">
+                <div class="leftT">
+                    <img src="https://unsplash.it/600/300/?random">
+                </div>
+                <div class="leftBL">
+                    <img src="https://unsplash.it/300/200/?random">
+                </div>
+                <div class="leftBR">
+                    <img src="https://unsplash.it/300/134/?random">
+                </div>
+            </div>
+            <div class="rightcol">
+                <div class="rightT">
+                    <img src="https://unsplash.it/300/200/?random">
+                </div>
+                <div class="rightB">
+                    <img src="https://unsplash.it/300/251/?random">
+                </div>
+            </div>
         </div>
-        <div class="leftBL">
-          <img src="https://unsplash.it/300/200/?random">
-        </div>
-        <div class="leftBR">
-          <img src="https://unsplash.it/300/134/?random">
-        </div>
-      </div>
-      <div class="rightcol">
-        <div class="rightT">
-          <img src="https://unsplash.it/300/200/?random">
-        </div>
-        <div class="rightB">
-          <img src="https://unsplash.it/300/251/?random">
-        </div>
-      </div>
     </div>
-  </div>
-  <div class="footermaster">
-    <div class="footercontainer">
-      <div class="footer1">
-        <h2>What's New</h2>
-        <p>We always have new projects that clients hire us for.
-          <br><br>
-          <a href>View recent projects.</a></p>
-      </div>
-      <div class="footer2">
-        <h2>Modern Layouts</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
+    <div class="footermaster">
+        <div class="footercontainer">
+            <div class="footer1">
+                <h2>What's New</h2>
+                <p>We always have new projects that clients hire us for.
+                    <br>
+                    <br>
+                    <a href>View recent projects.</a>
+                </p>
+            </div>
+            <div class="footer2">
+                <h2>Modern Layouts</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
     </div>
 </body>
+
+</html>
